<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidApp_Ui</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_bar_tv">动态</string>
    <string name="str_bar_tv_right">更多</string>
    <string name="str_hint">自拍</string>
    <string name="str_01">好友动态</string>
    <string name="str_02">附近</string>
    <string name="str_03">兴趣部落</string>
    <string name="str_05">游戏</string>
    <string name="str_06">购物</string>
    <string name="str_07">应用宝</string>
    <string name="str_08">附近的群</string>
    <string name="str_09">吃喝玩乐</string>
    <string name="str_010">同城服务</string>
    <string name="str_011">消息</string>
    <string name="str_012">联系人</string>

</resources>
