<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#18B4ED" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/str_bar_tv"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/str_bar_tv_right"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#EBECED" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edittext_focused"
                android:gravity="center"
                android:hint="@string/str_hint"
                android:textColorHint="#DEDEDE" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="#FFFFFF"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/igs"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/str_01"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/eqc"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/str_02"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/iei"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/str_03"
                    android:textColor="#000000" />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="#F5F5F5" />

        <RelativeLayout
            android:background="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="45dp" >

            <ImageView
                android:id="@+id/img02"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:background="@drawable/yx"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/img02"
                android:text="@string/str_05"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/img02"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#EBEBEB" />

        <RelativeLayout
            android:background="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="45dp" >

            <ImageView
                android:id="@+id/img06"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:background="@drawable/gw"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/img06"
                android:text="@string/str_06"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/img02"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#EBEBEB" />

        <RelativeLayout
            android:background="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="45dp" >

            <ImageView
                android:id="@+id/img07"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:background="@drawable/yyb"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/img07"
                android:text="@string/str_07"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/img02"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#EBEBEB" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="#F5F5F5" />

        <RelativeLayout
            android:background="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="45dp" >

            <ImageView
                android:id="@+id/img08"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:background="@drawable/fjdq"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/img08"
                android:text="@string/str_08"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/img02"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#EBEBEB" />

        <RelativeLayout
            android:background="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="45dp" >

            <ImageView
                android:id="@+id/img09"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:background="@drawable/chwl"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/img09"
                android:text="@string/str_09"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/img02"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#EBEBEB" />

        <RelativeLayout
            android:background="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="45dp" >

            <ImageView
                android:id="@+id/img010"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:background="@drawable/tcfw"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/img010"
                android:text="@string/str_010"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/img02"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <View
            android:id="@+id/view02"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#EBEBEB" />
    </LinearLayout>

    <RelativeLayout
        android:background="#FFFFFF"
        android:id="@+id/rl01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        tools:ignore="UselessLeaf" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="25dp"
            android:clickable="true"
            android:layout_marginTop="4dp"
            android:background="@drawable/selector_1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:layout_marginTop="4dp"
            android:background="@drawable/selector_2"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/selector_3"
           />
    </RelativeLayout>

    <View
        android:id="@+id/view01"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@id/rl01"
        android:background="#DEDEDE" />

</RelativeLayout>